# notekit

./: .gitignore  CLAUDE.md  CMakeLists.txt  config.h.in  meson.build  moc_notebook_widgets.cpp  moc_notebook_widgets.cpp_parameters
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.specify/memory/: constitution.md
data/: resources.qrc  stylesheet.qss
sourceview/: markdown.lang
specs/001-gtk-to-qt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gtk-to-qt/checklists/: requirements.md
specs/001-gtk-to-qt/contracts/: note-format.md  settings-schema.md
src/: about.cpp  about.h  about.ui  drawing.cpp  drawing.h  findinfiles.cpp  findinfiles.h  findinfiles_test.cpp  imagewidgets.cpp  imagewidgets.h  main.cpp  mainwindow.cpp  mainwindow.h  navigation.cpp  navigation.h  navigation_test.cpp  notebook.cpp  notebook.h  notebook_clipboard.hpp  notebook_highlight.hpp  notebook_test.cpp  notebook_widgets.hpp  settings.cpp  settings.h  settings_test.cpp  tests_main.cpp
tests/: CMakeLists.txt
